# weather_today

./: .env.example  .flake8  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: settings.py  urls.py
weatherApp/: forms.py  models.py  services.py  urls.py  views.py
weatherApp/migrations/: 0001_initial.py
weatherApp/templates/weatherApp/: base.html  main.html
