[tool.poetry]
name = "weather-today"
version = "0.1.0"
description = ""
authors = ["denisbelenko <denisdel123@>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
requests = "^2.32.3"
pillow = "^10.4.0"
psycopg2 = "^2.9.9"
ipython = "^8.26.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
